// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResultImpl displays custom background image when logo is provided 1`] = `
<div>
  <article
    class="ecl-u-d-flex ecl-u-border-bottom ecl-u-border-color-grey-15 ecl-u-pv-m"
  >
    <div
      class="ecl-u-flex-grow-1"
    >
      <div
        class="ecl-u-type-prolonged-m ecl-u-type-bold ecl-u-mt-xs"
      >
        <a
          class="ecl-u-type-prolonged-m ecl-u-type-bold ecl-link"
          href="#"
        >
          Test title
        </a>
      </div>
      <ul
        class="ecl-u-mt-m ecl-unordered-list ecl-unordered-list--no-bullet"
      >
        <li
          class="ecl-u-d-flex ecl-u-align-items-center ecl-u-type-color-grey-75 ecl-unordered-list__item"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon--m ecl-icon ecl-icon--m"
            focusable="false"
          >
            
            
            <use
              xlink:href="file#general--organigram"
            />
          </svg>
          <span
            class="ecl-u-type-s ecl-u-ml-s"
          >
            Current status
            : 
            Test status
          </span>
        </li>
        <li
          class="ecl-u-d-flex ecl-u-align-items-center ecl-u-type-color-grey-75 ecl-unordered-list__item"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon--m ecl-icon ecl-icon--m"
            focusable="false"
          >
            
            
            <use
              xlink:href="file#general--edit"
            />
          </svg>
          <span
            class="ecl-u-type-s ecl-u-ml-s"
          >
            Registration number
            : 
            1234
          </span>
        </li>
      </ul>
    </div>
    <div
      aria-label="Test title"
      class="ecl-u-media-ratio-3-2 ecl-u-flex-shrink-0 ecl-u-ml-xl ecl-u-d-lg-none"
      role="img"
      style="background-image: url(data:image/jpeg;base64,undefined); background-repeat: no-repeat; background-size: contain; height: 5rem; width: 7.5rem;"
    />
    <div
      aria-label="Test title"
      class="ecl-u-media-ratio-3-2 ecl-u-flex-shrink-0 ecl-u-ml-xl ecl-u-d-none ecl-u-d-lg-block"
      role="img"
      style="background-image: url(data:image/jpeg;base64,undefined); background-repeat: no-repeat; background-size: contain; height: 8.75rem; width: 13.125rem;"
    />
  </article>
</div>
`;

exports[`ResultImpl render even on missing input parameters 1`] = `
<div>
  <article
    class="ecl-u-d-flex ecl-u-border-bottom ecl-u-border-color-grey-15 ecl-u-pv-m"
  >
    <div
      class="ecl-u-flex-grow-1"
    >
      <div
        class="ecl-u-type-prolonged-m ecl-u-type-bold ecl-u-mt-xs"
      >
        <a
          class="ecl-u-type-prolonged-m ecl-u-type-bold ecl-link"
        />
      </div>
      <ul
        class="ecl-u-mt-m ecl-unordered-list ecl-unordered-list--no-bullet"
      >
        <li
          class="ecl-u-d-flex ecl-u-align-items-center ecl-u-type-color-grey-75 ecl-unordered-list__item"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon--m ecl-icon ecl-icon--m"
            focusable="false"
          >
            
            
            <use
              xlink:href="file#general--organigram"
            />
          </svg>
          <span
            class="ecl-u-type-s ecl-u-ml-s"
          >
            Current status
            : 
          </span>
        </li>
        <li
          class="ecl-u-d-flex ecl-u-align-items-center ecl-u-type-color-grey-75 ecl-unordered-list__item"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon--m ecl-icon ecl-icon--m"
            focusable="false"
          >
            
            
            <use
              xlink:href="file#general--edit"
            />
          </svg>
          <span
            class="ecl-u-type-s ecl-u-ml-s"
          >
            Registration number
            : 
          </span>
        </li>
      </ul>
    </div>
    <div
      class="ecl-u-media-ratio-3-2 ecl-u-flex-shrink-0 ecl-u-ml-xl ecl-u-d-lg-none"
      role="img"
      style="background-image: url(file); background-repeat: no-repeat; background-size: contain; height: 5rem; width: 7.5rem;"
    />
    <div
      class="ecl-u-media-ratio-3-2 ecl-u-flex-shrink-0 ecl-u-ml-xl ecl-u-d-none ecl-u-d-lg-block"
      role="img"
      style="background-image: url(file); background-repeat: no-repeat; background-size: contain; height: 8.75rem; width: 13.125rem;"
    />
  </article>
</div>
`;

exports[`ResultImpl renders default image when logo is not provided 1`] = `
<div>
  <article
    class="ecl-u-d-flex ecl-u-border-bottom ecl-u-border-color-grey-15 ecl-u-pv-m"
  >
    <div
      class="ecl-u-flex-grow-1"
    >
      <div
        class="ecl-u-type-prolonged-m ecl-u-type-bold ecl-u-mt-xs"
      >
        <a
          class="ecl-u-type-prolonged-m ecl-u-type-bold ecl-link"
          href="#"
        >
          Test title
        </a>
      </div>
      <ul
        class="ecl-u-mt-m ecl-unordered-list ecl-unordered-list--no-bullet"
      >
        <li
          class="ecl-u-d-flex ecl-u-align-items-center ecl-u-type-color-grey-75 ecl-unordered-list__item"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon--m ecl-icon ecl-icon--m"
            focusable="false"
          >
            
            
            <use
              xlink:href="file#general--organigram"
            />
          </svg>
          <span
            class="ecl-u-type-s ecl-u-ml-s"
          >
            Current status
            : 
            Test status
          </span>
        </li>
        <li
          class="ecl-u-d-flex ecl-u-align-items-center ecl-u-type-color-grey-75 ecl-unordered-list__item"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon--m ecl-icon ecl-icon--m"
            focusable="false"
          >
            
            
            <use
              xlink:href="file#general--edit"
            />
          </svg>
          <span
            class="ecl-u-type-s ecl-u-ml-s"
          >
            Registration number
            : 
            1234
          </span>
        </li>
      </ul>
    </div>
    <div
      aria-label="Test title"
      class="ecl-u-media-ratio-3-2 ecl-u-flex-shrink-0 ecl-u-ml-xl ecl-u-d-lg-none"
      role="img"
      style="background-image: url(file); background-repeat: no-repeat; background-size: contain; height: 5rem; width: 7.5rem;"
    />
    <div
      aria-label="Test title"
      class="ecl-u-media-ratio-3-2 ecl-u-flex-shrink-0 ecl-u-ml-xl ecl-u-d-none ecl-u-d-lg-block"
      role="img"
      style="background-image: url(file); background-repeat: no-repeat; background-size: contain; height: 8.75rem; width: 13.125rem;"
    />
  </article>
</div>
`;
